--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:search.api": "wdio wdio.conf.js --spec ./test/specs/search.api.js",
     "test:search": "wdio wdio.conf.js --spec ./test/specs/home.search.js",
     "echo:lint": "echo \"Running eslint rules ... \" && exit 0",
-    "echo:test": "echo \"Running Unit Tests ... \" && exit 0"
+    "echo:test": "echo \"Running Unit Tests ... \" && exit 0",
+    "report": "allure generate ./allure-results --clean && allure open"
   },
   "pre-commit": [
     "echo:lint",
@@ -46,12 +47,14 @@
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
+    "@wdio/allure-reporter": "^5.12.1",
     "@wdio/cli": "^5.12.1",
     "@wdio/dot-reporter": "^5.12.1",
     "@wdio/local-runner": "^5.12.1",
     "@wdio/mocha-framework": "^5.12.1",
     "@wdio/spec-reporter": "^5.12.1",
     "@wdio/sync": "^5.12.1",
+    "allure-commandline": "^2.9.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "chromedriver": "^76.0.0",
